<resources>
    <string name="app_name">GoodJobRay</string>
    <string name="home_button_description">Home button</string>
    <string name="planner_button_description">Planner button</string>
    <string name="add_button_description">Add button</string>
    <string name="notes_button_description">Notes button</string>
    <string name="timer_button_description">Timer button</string>
</resources>